apps/multimedia/manifests/sonarr/05_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: multimedia
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  serviceName: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: "Europe/Berlin"
        name: sonarr
        image: ghcr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8989
            name: http-sonarr
        readinessProbe:
          tcpSocket:
            port: http-sonarr
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /tv
            name: data
          - mountPath: /download/completed
            name: downloads
        resources:
          requests:
            cpu: 20m
            memory: 320Mi
      - env:
        - name: URL
          value: "http://127.0.0.1:8989"
        #- name: LOG_LEVEL
        #  value: "DEBUG"
        - name: PORT
          value: "9707"
        name: exportarr
        image: onedr0p/exportarr:v0.3.4
        args: ["sonarr"]
        ports:
        - name: metrics
          containerPort: 9707
        readinessProbe:
          httpGet:
            path: /healthz
            port: metrics
          failureThreshold: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 1m
            memory: 11Mi
          limits:
            cpu: 50m
            memory: 100Mi
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tv
      - name: downloads
        persistentVolumeClaim:
          claimName: torrents
      nodeSelector:
        kubernetes.io/arch: "amd64"
        storage.infra/direct: "true"  # use direct network link for tv volume
      tolerations: []
  volumeClaimTemplates:
  - metadata:
      name: config
      namespace: multimedia
      annotations:
        volume.beta.kubernetes.io/storage-class: "longhorn"
    spec:
      storageClassName: "longhorn"
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 600Mi
