apps/multimedia/manifests/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: sonarr
    app.kubernetes.io/version: 4.0.12
  name: sonarr
  namespace: multimedia
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/part-of: sonarr
  serviceName: sonarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: sonarr
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/part-of: sonarr
        app.kubernetes.io/version: 4.0.12
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
            - name: PUID
              value: "1000"
            - name: GUID
              value: "1000"
          image: lscr.io/linuxserver/sonarr:4.0.12
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 2
            tcpSocket:
              port: http
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 750m
              memory: 700Mi
            requests:
              cpu: 200m
              memory: 300Mi
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /multimedia
              name: multimedia
            - mountPath: /download
              name: downloads
        - args:
            - sonarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1
          name: exportarr
          ports:
            - containerPort: 9707
              name: metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: metrics
            periodSeconds: 10
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 1m
              memory: 11Mi
          volumeMounts:
            - mountPath: /app
              name: config
              readOnly: true
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      serviceAccountName: sonarr
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: tv
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
