apps/multimedia/manifests/sonarr/03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: multimedia-svc
  labels:
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: multimedia
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.95
  ports:
  - port: 8989
    protocol: TCP
    targetPort: http-sonarr
  selector:
    app.kubernetes.io/name: sonarr
  sessionAffinity: None
  type: LoadBalancer
