apps/multimedia/manifests/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://avatars3.githubusercontent.com/u/1082903?s=200&v=4
    reloader.homer/name: Sonarr
    reloader.homer/subtitle: TV shows collection management
    reloader.homer/tag: local
  labels:
    probe: enabled
    reloader.homer/enabled: "true"
  name: sonarr
  namespace: multimedia
spec:
  ingressClassName: private
  rules:
    - host: sonarr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.ankhmorpork.thaum.xyz
      secretName: sonarr-ankhmorpork-thaum-xyz-tls
